--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "@azure/storage-blob": "^12.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.2.4"
+    "mongoose": "^7.2.4",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.1"
   },
   "scripts": {
     "clean": "rimraf ./build",
@@ -22,6 +25,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
